--- a/openseats/templates/mypage.html
+++ b/openseats/templates/mypage.html
@@ -5,8 +5,40 @@
 {% block content %}
 {% if g.user %}
 
+    <div class="container mt-5">
+    <div class="row">
+        <div class="col-md-4">
+        <div class="card mb-3">
+            <div class="card-body">
+            <img src="{{ url_for('static', filename='/img/profile/default_profile.png') }}" class="img-fluid rounded-circle mb-3" alt="프로필 사진">
+            <h5 class="card-title">{{ g.user.username }}</h5>
+            <p class="card-text">{{ g.user.email }}</p>
+            </div>
+        </div>
+        <a href="#" class="btn btn-primary">프로필 수정</a>
+        </div>
+        <div class="col-md-8">
+        <h2>가입중인 그룹 목록</h2>
+        <hr>
+        {% for post in range(10) %}
+        <div class="card mb-3">
+            <div class="card-body">
+            <h5 class="card-title">title</h5>
+            <p class="card-text">그룹예시</p>
+            </div>
+            <div class="card-footer text-muted">
+                예시
+            </div>
+        </div>
+        {% endfor %}
+        <a href="#" class="btn btn-primary">게시글 작성</a>
+        </div>
+    </div>
+    </div>
 
-{% else %}
-<h1>로그인이 필요합니다!</h1>
-{% endif %}
+
+    {% else %}
+        <h1>로그인이 필요합니다!</h1>
+    {% endif %}
+
 {% endblock %}
