--- a/openseats/templates/auth/sign_up.html
+++ b/openseats/templates/auth/sign_up.html
@@ -22,6 +22,10 @@
                   <label for="email">이메일</label>
                 </div>
                 <div class="form-floating mb-3">
+                  <input type="text" class="form-control" id="userID" name="userID" placeholder="유저 아이디" value="{{ form.userID.data or '' }}">
+                  <label for="text">유저 아이디</label>
+                </div>
+                <div class="form-floating mb-3">
                   <input type="password" class="form-control" id="password1" name="password1" placeholder="비밀번호" value="{{ form.password2.data or '' }}">
                   <label for="password">비밀번호</label>
                 </div>
