--- a/openseats/templates/group/group_detail.html
+++ b/openseats/templates/group/group_detail.html
@@ -6,32 +6,20 @@ endblock %} {% block content %}
     margin: 0 20px;
   }
 
-  .banner_img:parent {
-    width: 550px;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff; /* 부모 요소의 배경색을 흰색으로 설정 */
-  }
-
   .banner_img {
     min-width: 550px;
-    height: auto;
     max-height: 400px;
+    background-size: cover;
   }
 </style>
 
 <div class="container mt-5" style="padding: 0 80px">
   <div class="d-flex flex-sm-row flex-column">
     <div style="max-width: 550px; max-height: 400px !important">
-      <div
-        id="carouselExampleIndicators"
-        class="carousel slide"
-        data-interval="false"
-      >
+      <!-- carousel 시작 -->
+      <div id="carouselExampleIndicators" class="carousel slide" data-interval="false">
         <div class="carousel-indicators">
-          <button
+         <button
             type="button"
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide-to="0"
@@ -87,6 +75,7 @@ endblock %} {% block content %}
         </button>
         {% endif %}
       </div>
+      <!-- carousel -->
     </div>
     <div class="info">
       <h2 class="fw-bold" style="font-size: 35px; margin-bottom: 3px">
@@ -100,16 +89,43 @@ endblock %} {% block content %}
       <div class="dropdown-divider" style="margin: 15px 0"></div>
       <div class="description" style="margin-left: 3px">
         <h3 class="fw-bold" style="font-size: 20px; margin-bottom: 5px">
+          그룹 관리자
+        </h3>
+        <p>{{group.owner.username}} ({{ group.owner.email }})</p>
+      </div>
+      <div class="description" style="margin-left: 3px">
+        <h3 class="fw-bold" style="font-size: 20px; margin-bottom: 5px">
           그룹 정보
         </h3>
         <p>{{ group.description }}</p>
       </div>
-      <div class="description" style="margin-left: 3px">
+      
+      
+
+        <!-- 예약하기 버튼 -->
+      <form method="POST" action="{{ url_for('group.join', group_id=group.id, user_id=g.user.id) }}">
+        {% if is_joined %}
+        <input class="btn btn-primary" type="submit" value="이미 가입되어 있습니다." disabled>
+        {% else %}
+        <input class="btn btn-primary" type="submit" value="가입신청">
+        {% endif %}
+      </form>
+      
+
+      <!-- <div class="description" style="margin-left: 3px">
         <h3 class="fw-bold" style="font-size: 20px; margin-bottom: 5px">
-          그룹 관리자
+          그룹 예약자
         </h3>
-        <p>{{group.user.username}} ({{ group.user.email }})</p>
-      </div>
+        {% if group.reservation %}
+        <ul>
+        {% for reservation in group.reservation %}
+        <li>
+        {{ reservation.user.username }} ({{ reservation.user.email }})
+        </li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+      </div> -->
     </div>
   </div>
 </div>
