--- a/openseats/templates/main.html
+++ b/openseats/templates/main.html
@@ -31,8 +31,8 @@
         <h1 class="display-4"></h1>
         <h1 class="display-4">{{ g.user.username }}님 환영합니다.</h1>
         <p class="lead">그룹을 만들거나 그룹에 참여해보세요!</p>
-        <a class="btn btn-lg btn-primary" href="#" role="button">그룹 만들기</a>
-        <a class="btn btn-lg btn-primary" href="#" role="button">그룹 참여하기</a>
+        <a class="btn btn-lg btn-primary" href="{{ url_for('group.main_page') }}" role="button">그룹 참여하기</a>
+        <a class="btn btn-lg btn-primary" href="{{ url_for('group.create') }}" role="button">그룹 만들기</a>
       </div>
     </div>
   </div>
