--- a/openseats/templates/group/group_detail/community.html
+++ b/openseats/templates/group/group_detail/community.html
@@ -17,14 +17,13 @@
   }
 </style>
 
-
 <!-- Post Form -->
 <div class="card">
   <div class="card-body">
     <div class="card-profile d-flex">
         <img src="{{ url_for('feature.get_profile_image', user_id=g.user.id) }}" class="rounded-circle d-block" style="margin-right: 10px;" alt="프로필 사진" width="45" height="45">
         <div class="card-profile-info">
-          <h5 class="card-title d-flex fw-bold">
+          <h5 class="card-title d-flex fw-bold mb-1">
               <a class="a" class="fw-bold"  href="{{ url_for('main.my_page', username='ohinsu134')}}">
               {{ g.user.username }}
               </a>
@@ -37,7 +36,6 @@
       <textarea class="form-control mb-2" id="content" name="content" placeholder="게시글을 작성하세요." rows="3"></textarea>
       <div class="options-left d-flex gap-3">
         <div class="like d-flex"><button type="submit" class="btn btn-primary">작성</button></div>
-        <div class="like d-flex"><button type="button" class="btn btn-secondary">취소</button></div>
       </div>
     </form>
     <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
@@ -48,22 +46,22 @@
 
 
 <!-- Posts -->
-{% for i in range(0, group.community_posts|length) %}
+{% for i in range(0, group.community_posts|length)|sort(reverse=True) %}
 <div class="card">
   <div class="card-body">
     <div class="card-profile d-flex">
-        <img src="{{ url_for('feature.get_profile_image', user_id=group.owner.id) }}" class="rounded-circle d-block" style="margin-right: 10px;" alt="프로필 사진" width="45" height="45">
+        <img src="{{ url_for('feature.get_profile_image', user_id=group.community_posts[i].user_id) }}" class="rounded-circle d-block" style="margin-right: 10px;" alt="프로필 사진" width="45" height="45">
         <div class="card-profile-info">
-          <h5 class="card-title d-flex fw-bold">
+          <h5 class="card-title d-flex fw-bold mb-1">
               <a class="a" class="fw-bold"  href="{{ url_for('main.my_page', username='ohinsu134')}}">
               {{ group.community_posts[i].user.username }}
               </a>
-            </h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">{{ group.community_posts[i].user.email }}</h6>
+          </h5>
+          <h6 class="card-subtitle mb-2 text-body-secondary">{{ group.community_posts[i].user.email }}</h6>
         </div>
     </div>
     <p class="card-text">{{ group.community_posts[i].content }}</p>
-    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    <p class="card-text text-muted"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
   </div>
   <div class="card-footer options text-body-secondary bg-white d-flex justify-content-between">
     <div class="options-left d-flex gap-3">
@@ -74,12 +72,15 @@
       <div class="comment d-flex comment-toggle-button" data-post-id="{{i}}"><i class="bi bi-chat"></i><p>13</p></div>
       <!-- <div class="comment d-flex" id="comment-toggle" data-post-id="{{ post_id }}"><i class="bi bi-chat"></i><p>13</p></div> -->
     </div>
-    <div class="options-left d-flex gap-3">
-      <div class="dislike d-flex"><i class="bi bi-pencil-square"></i></div>
-      <div class="like d-flex"><i class="bi bi-trash3-fill"></i></i></div>
+    {% if g.user.id == group.community_posts[i].user_id %}
+    <div class="options-right d-flex gap-3">
+      <div class="modify d-flex"><i class="bi bi-pencil-square"></i></div>
+      <div class="delete d-flex"><i class="bi bi-trash3-fill"></i></i></div>
     </div>
+    {% endif %}
 
   </div>
+  
   <div class="card-comments border-top" id="comments-{{i}}" style="display: none;">
     <!-- <div class="card-comments" id="comments-{{ post_id }}"> -->
       <ul class="list-group list-group-flush">
@@ -93,18 +94,7 @@
 
 
 <script>
-  // document.addEventListener('DOMContentLoaded', function() {
-  //   var commentToggleButtons = document.getElementsByClassName('comment-toggle-button');
-  //   for (var i = 0; i < commentToggleButtons.length; i++) {
-  //     commentToggleButtons[i].addEventListener('click', function() {
-  //       var postId = this.getAttribute('data-post-id');
-  //       var comments = document.getElementById('comments-' + postId)
-  //       comments.style.display = (comments.style.display === 'none') ? 'block' : 'none';
-  //     })
-  //   }
-  // })
-
-  // 버튼 클릭 이벤트 핸들러
+  //Comment 버튼 클릭 이벤트 핸들러
   document.addEventListener('DOMContentLoaded', function() {
     var toggleButtons = document.getElementsByClassName('comment-toggle-button');
     for (var i = 0; i < toggleButtons.length; i++) {
